# hyperbrain-skills

./: COMPLETE_LIBRARY_SUMMARY.md  GRAPHIFY_INTEGRATION.md  INSTALL.md  LIBRARY_STATS.md  Makefile  QUICKSTART.md  README.md  install.sh  package.json  pyproject.toml
backend-knowledge-base/: KNOWLEDGE_GRAPH.json  SKILL.md
dejoule-knowledge-base/: KNOWLEDGE_GRAPH.json  SKILL.md
expert-personas/: README.md  SKILL.md
graphify-integration/: README.md  SKILL.md
graphify-integration/examples/: backend-analysis.md  iot-architecture.md
influxdb-patterns/: SKILL.md
iot-architecture/: SKILL.md
iot-knowledge-base/: KNOWLEDGE_GRAPH.json  SKILL.md
kafka-patterns/: SKILL.md
mcp-installer/: README.md  SKILL.md
mcp-installer/examples/: quick-start.md
mcp-on-demand/: README.md  SKILL.md  mcp-config.json
mcp-setup/: .env.example  .gitignore  README.md  SKILL.md  setup-mcp.sh
mqtt-patterns/: SKILL.md
