[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai-sdlc-skills"
version = "2.0.0"
description = "Comprehensive AI-SDLC skills library for AI coding assistants"
authors = [{name = "Atif Salafi", email = "atif8486@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ai", "sdlc", "skills", "claude", "cursor", "copilot", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/itsatif/ai-sdlc-skills"
Repository = "https://github.com/itsatif/ai-sdlc-skills"
Documentation = "https://github.com/itsatif/ai-sdlc-skills/blob/main/INSTALL.md"
Issues = "https://github.com/itsatif/ai-sdlc-skills/issues"

[project.scripts]
ai-sdlc-install = "install:main"

[tool.flit.module]
name = "ai_sdlc_skills"

[tool.flit.scripts]
ai-sdlc-install = "install:main"
